# desmume

./: CMakeLists.txt
desmume/: ARCHITECTURE.md
desmume/src/: FIFO.cpp  GPU.cpp  GPU.h  GPU_Operations.cpp  GPU_Operations.h  GPU_Operations_NEON.cpp  texcache.h
desmume/src/addons/: slot1_none.cpp  slot1_r4.cpp  slot1_retail_auto.cpp  slot1_retail_mcrom.cpp  slot1_retail_mcrom_debug.cpp  slot1_retail_nand.cpp  slot1comp_mc.cpp  slot1comp_protocol.cpp  slot1comp_protocol.h  slot1comp_rom.cpp  slot2_auto.cpp  slot2_expMemory.cpp  slot2_gbagame.cpp  slot2_guitarGrip.cpp  slot2_hcv1000.cpp  slot2_mpcf.cpp  slot2_none.cpp  slot2_paddle.cpp  slot2_passme.cpp  slot2_piano.cpp  slot2_rumblepak.cpp
desmume/src/config/: README.md
desmume/src/core/: README.md
desmume/src/core/audio/: SPU.cpp
desmume/src/core/cpu/: armcpu.cpp
desmume/src/core/graphics/: GPU.cpp  gfx3d.cpp  rasterize.cpp  render3D.cpp  render3D.h
desmume/src/core/io/: slot1.cpp
desmume/src/core/memory/: MMU.cpp  MMU.h
desmume/src/core/system/: NDSSystem.cpp
desmume/src/frontend/: README.md
desmume/src/frontend/api/interface/: interface.cpp  interface.h  meson.build
desmume/src/frontend/cli/posix/: main.cpp
desmume/src/frontend/interface/: interface.cpp  interface.h  meson.build  meson_options.txt
desmume/src/frontend/interface/windows/: DeSmuME_Interface.vcxproj
desmume/src/frontend/posix/: Makefile.am  meson.build  meson_options.txt
desmume/src/frontend/posix/cli/: Makefile.am  meson.build
desmume/src/frontend/posix/tests/: meson.build
desmume/src/frontend/posix/tests/fixtures/: context_fixture.h
desmume/src/frontend/posix/tests/integration/: test_context.cpp  test_cpu_context.cpp  test_mmu_context.cpp  test_multithread.cpp
desmume/src/graphics/filters/: README.md  videofilter.cpp
desmume/src/platform/: README.md
desmume/src/platform/opengl/: OGLRender.cpp
desmume/src/platform/sdl/audio/: sndsdl.cpp
desmume/src/platform/sdl/window/: draw_sdl_window.cpp
desmume/src/utils/: README.md  advanscene.cpp  emufat.cpp  vfat.cpp  xstring.h
desmume/src/utils/debug/: debug.cpp
desmume/src/utils/debug/gdbstub/: gdbstub.cpp  gdbstub_threading.cpp
